class AppSettingsModel {
  int? id;
  bool darkmode;

  AppSettingsModel(this.id, this.darkmode);
}
