class ServiceModel {
  int id = 0;
  String name;
  String company;
  Uri image;

  ServiceModel(this.id, this.name, this.company, this.image);
}