@startuml
set namespaceSeparator ::

abstract class "waultar::core::models::base_model.dart::BaseModel" {
  +int id
  +ServiceModel service
  +String raw
}

"waultar::core::models::base_model.dart::BaseModel" o-- "waultar::core::models::misc::service_model.dart::ServiceModel"

class "waultar::core::models::content::event_model.dart::EventModel" {
  +String name
  +DateTime? startTimestamp
  +DateTime? endTimestamp
  +DateTime? createdTimestamp
  +String? description
  +bool isUsers
  +PlaceModel? place
  +EventResponse? response
}

"waultar::core::models::content::event_model.dart::EventModel" o-- "waultar::core::models::misc::place_model.dart::PlaceModel"
"waultar::core::models::content::event_model.dart::EventModel" o-- "waultar::core::models::content::event_model.dart::EventResponse"
"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::content::event_model.dart::EventModel"

class "waultar::core::models::content::event_model.dart::EventResponse" {
  +int index
  {static} +List<EventResponse> values
  {static} +EventResponse interested
  {static} +EventResponse joined
  {static} +EventResponse declined
}

"waultar::core::models::content::event_model.dart::EventResponse" o-- "waultar::core::models::content::event_model.dart::EventResponse"
"dart::core::Enum" <|-- "waultar::core::models::content::event_model.dart::EventResponse"

class "waultar::core::models::content::group_model.dart::GroupModel" {
  +String name
  +bool isUsers
  +String? badge
  +DateTime? timestamp
}

"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::content::group_model.dart::GroupModel"

class "waultar::core::models::content::life_event_model.dart::LifeEventModel" {
  +String title
  +PlaceModel? place
}

"waultar::core::models::content::life_event_model.dart::LifeEventModel" o-- "waultar::core::models::misc::place_model.dart::PlaceModel"
"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::content::life_event_model.dart::LifeEventModel"

class "waultar::core::models::content::poll_model.dart::PollModel" {
  +String? question
  +bool isUsers
  +String? options
}

"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::content::poll_model.dart::PollModel"

class "waultar::core::models::content::post_model.dart::PostModel" {
  +DateTime timestamp
  +List<MediaModel>? content
  +String? description
  +String? title
  +List<PersonModel>? mentions
  +List<TagModel>? tags
  +EventModel? event
  +GroupModel? group
  +PollModel? poll
  +LifeEventModel? lifeEvent
  +bool? isArchived
  +String? meta
  +String toString()
}

"waultar::core::models::content::post_model.dart::PostModel" o-- "waultar::core::models::content::event_model.dart::EventModel"
"waultar::core::models::content::post_model.dart::PostModel" o-- "waultar::core::models::content::group_model.dart::GroupModel"
"waultar::core::models::content::post_model.dart::PostModel" o-- "waultar::core::models::content::poll_model.dart::PollModel"
"waultar::core::models::content::post_model.dart::PostModel" o-- "waultar::core::models::content::life_event_model.dart::LifeEventModel"
"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::content::post_model.dart::PostModel"

class "waultar::core::models::media::file_model.dart::FileModel" {
  +Uri? thumbnail
}

"waultar::core::models::media::media_model.dart::MediaModel" <|-- "waultar::core::models::media::file_model.dart::FileModel"

class "waultar::core::models::media::image_model.dart::ImageModel" {
  +String title
  +String description
}

"waultar::core::models::media::media_model.dart::MediaModel" <|-- "waultar::core::models::media::image_model.dart::ImageModel"

class "waultar::core::models::media::link_model.dart::LinkModel" {
  +String? source
}

"waultar::core::models::media::media_model.dart::MediaModel" <|-- "waultar::core::models::media::link_model.dart::LinkModel"

abstract class "waultar::core::models::media::media_model.dart::MediaModel" {
  +Uri uri
  +String? metadata
  +DateTime? timestamp
}

"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::media::media_model.dart::MediaModel"

class "waultar::core::models::media::video_model.dart::VideoModel" {
  +String title
  +String description
  +Uri? thumbnail
}

"waultar::core::models::media::media_model.dart::MediaModel" <|-- "waultar::core::models::media::video_model.dart::VideoModel"

class "waultar::core::models::misc::appsettings_model.dart::AppSettingsModel" {
  +int? id
  +bool darkmode
}

class "waultar::core::models::misc::coordinate_model.dart::CoordinateModel" {
  +int id
  +double longitude
  +double latitude
}

class "waultar::core::models::misc::person_model.dart::PersonModel" {
  +String name
  +String? uri
}

"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::misc::person_model.dart::PersonModel"

class "waultar::core::models::misc::place_model.dart::PlaceModel" {
  +String? name
  +String? address
  +CoordinateModel? coordinate
}

"waultar::core::models::misc::place_model.dart::PlaceModel" o-- "waultar::core::models::misc::coordinate_model.dart::CoordinateModel"
"waultar::core::models::base_model.dart::BaseModel" <|-- "waultar::core::models::misc::place_model.dart::PlaceModel"

class "waultar::core::models::misc::service_model.dart::ServiceModel" {
  +int id
  +String name
  +String company
  +Uri image
}

class "waultar::core::models::misc::tag_model.dart::TagModel" {
  +int id
  +String name
}

class "waultar::core::models::model_helper.dart::ModelHelper" {
  {static} +List<String> knownTimestampKeys
  {static} +DateTime? getTimestamp()
  {static} +String? trySeveralKeys()
}


@enduml